# DevOps_Oct2025_Team4_Assignment

./: .gitignore  Dockerfile  README.md  notify-QA-discord.py  notify-dev-discord.py  notify-email.py  notify-main-discord.py  package-lock.json  package.json  pyproject.toml  qa-test.sh  requirements.txt  save.db
.github/workflows/: QA-notifications.yml  ci-email  ci-notifications.yml  ci.yml  dast.yml  deploy.yml  dev-notifications.yml  dynamic-security-tests.yml  e2e-tests.yml  e2e.yml  email-notifications.yml  iast.yml  release.yml  reusable-notify.yml  static-security-tests.yml  unit-tests.yml
Frontend/: index.html
Frontend/login/: login.css  login.html  login.js
app/: __init__.py  admin.py  admin_routes.py  app.py  auth.py  dashboard.py  db.py  devops_logger.py  files.py  middleware.py  observability.py  schema.sql  setup.py  utils.py
app/templates/: admin_dashboard.html  index.html  login.html  user_dashboard.html
iam-policies/: github-trust-policy.json  terraform-deployment-policy.json
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_admin.py  test_app.py  test_auth.py  test_e2e.py  test_files.py
